tests/compile_fail/duplicate_import.olrn
@import (
    a = "modules/dup_import_mod.olrn",
    b = "./modules/dup_import_mod.olrn",
)

fn main() -> void
{
    @pl(a.value())
    @pl(b.value())
}
